# langg

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
dicts/: all-letters-format-testing.txt  hello-there-dict.txt
langg/: README.md  __init__.py  __main__.py
langg/bot/: bot.py  message_util.py  user_data.py
langg/lib/: langg.py  node.py  tree.py  ttop.py
langg/proto/: ttop.proto  ttop_pb2.py
langg/translate/: router_vals.py  squirrel3.py  squirrel3_rng.py  translator.py
langg/treegen/: argp.py  node.py  tree.py  ttop.py
langg/util/: argp.py  argp_ext.py  cleaning_dict.py  consts.py  mt19937_64.py  namespace.py  namespace_ext.py
